# partial-optimality-in-cubic-correlation-clustering

./: .gitignore  CMakeLists.txt  README.md
include/andres/graph/: qpbo-problem.hxx  qpbo.hxx
include/andres/graph/detail/: graph.hxx
include/andres/graph/multicut-cubic/: absolute-cost-problem-adaptor.hxx  negative-part-cost-problem-adaptor.hxx  persistency.hxx  problem.hxx  qpbo-cut-problem-adaptor.hxx
include/dssc/: csv-writer.hxx  latex.hxx  math.hxx
include/dssc/cost-adjustment-adaptors/: problem-cost-multiplication-adaptor.hxx  problem-rescaling-adaptor.hxx
include/dssc/equilateral-triangles/: latex.hxx  problem-adaptor.hxx  problem.hxx
include/dssc/partition/: problem.hxx
include/dssc/persistency/: result-writer.hxx  results.hxx
src/equilateral-triangles/: persistency.cxx
src/predefined-partition/: persistency.cxx
src/test/andres/graph/: qpbo-problem.cxx  submodular-qpbo-maxflow-solver.cxx
src/test/andres/graph/multicut-cubic/: persistency-edge-cut.cxx  persistency-edge-join.cxx  persistency-edge-subgraph.cxx  persistency-independent-subproblems.cxx  persistency-subset-join.cxx  persistency-triplet-cut.cxx  persistency-triplet-edge-join.cxx  persistency-triplet-join.cxx  persistency-triplet-subgraph.cxx  problem.cxx  qpbo-adaptor.cxx
src/test/dssc/: math.cxx
src/test/dssc/adaptors/: problem-rescaling-adaptor.cxx
src/test/dssc/adaptors/triangles/: costs.cxx
src/test/partition/: partition.cxx
